tdf#117298: migration Firebird, fix time data

by just adjusting nColIndex like other datatypes

Change-Id: Ia7947b3498818bac2f033eac81ac3835f98bbab3